test/errors/error8.sp
% record defintiion contains an undefined sort.
sorts
#s1={a}. 
#s=f(#s1,#s2).
predicates
program rules
